
set(SOURCE_FILES_PRIMESIGN_GENERIC_REF
    ${PRIMESIGNX_DIR}/sign.c
    ${PRIMESIGNX_DIR}/keygen.c
)

add_library(${LIB_PRIMESIGN_${SVARIANT_UPPER}} ${SOURCE_FILES_PRIMESIGN_GENERIC_REF})
target_include_directories(${LIB_PRIMESIGN_${SVARIANT_UPPER}} PRIVATE common ${INC_PUBLIC} ${INC_INTBIG} ${INC_PRECOMP_${SVARIANT_UPPER}} ${INC_QUATERNION} ${INC_KLPT} ${INC_GF} ${INC_GF_${SVARIANT_UPPER}} ${INC_EC} ${INC_ID2ISO} ${INC_HD} ${INC_DIM2ID2ISO} ${INC_PRIMESIGN} ${INC_COMMON})
target_compile_options(${LIB_PRIMESIGN_${SVARIANT_UPPER}} PRIVATE ${C_OPT_FLAGS})

add_subdirectory(test)
