
set(SOURCE_FILES_PRISM_GENERIC_REF
    ${PRISMX_DIR}/sign.c
    ${PRISMX_DIR}/keygen.c
)

add_library(${LIB_PRISM_${SVARIANT_UPPER}} ${SOURCE_FILES_PRISM_GENERIC_REF})
target_include_directories(${LIB_PRISM_${SVARIANT_UPPER}} PRIVATE common ${INC_PUBLIC} ${INC_INTBIG} ${INC_PRECOMP_${SVARIANT_UPPER}} ${INC_QUATERNION} ${INC_KLPT} ${INC_GF} ${INC_GF_${SVARIANT_UPPER}} ${INC_EC} ${INC_ID2ISO} ${INC_HD} ${INC_DIM2ID2ISO} ${INC_PRISM} ${INC_COMMON})
target_compile_options(${LIB_PRISM_${SVARIANT_UPPER}} PRIVATE ${C_OPT_FLAGS})

add_subdirectory(test)
